--- a/pyproject.toml
+++ b/pyproject.toml
@@ -118,12 +118,20 @@ lint.ignore = [
   "S104",   # Possible binding to all interface
 ]
 lint.per-file-ignores."tests/**/*.py" = [
-  "D",       # don"t care about documentation in tests
+  "ANN",     # don't care about annotations in tests
+  "BLE001",  # catching blind Exception in multiprocessing helpers
+  "D",       # don't care about documentation in tests
   "FBT",     # don't care about booleans as positional arguments in tests
   "INP001",  # no implicit namespace
-  "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
+  "PLC2701", # private imports allowed in tests
+  "PLR0913", # too many arguments in test helpers
+  "PLR0917", # too many positional arguments in test helpers
+  "PLR2004", # magic value used in comparison
   "S101",    # asserts allowed in tests
+  "S110",    # try-except-pass in tests
   "S603",    # `subprocess` call: check for execution of untrusted input
+  "SLF001",  # private member access in tests
+  "TRY300",  # consider moving to else block
 ]
 lint.isort = { known-first-party = [
   "filelock",
